Formulaires de contact

--- a/templates/recipe/create.html.twig
+++ b/templates/recipe/create.html.twig
@@ -3,6 +3,9 @@
 {% block title "Créer une recette" %}
 
 {% block body %}
+<p>
+    <a class="btn btn-dark btn-sm" href="{{path('recipe.index')}}"><img src="{{asset('assets/images/icons/arrow-left-short.svg')}}" alt="icon retour" class="img-fluid">Retour</a>
+ </p>
 <h1>Créer une nouvelle recette</h1>
 
 {{ form(form) }}
