--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,10 @@
             <a class="nav-link text-light {{app.current_route starts with 'recipe.' ? 'active' : ''}}"
               href="{{path('recipe.index')}}">Recettes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-light {{app.current_route == 'contact' ? 'active' : ''}}"
+              href="{{path('contact')}}">Contact</a>
+          </li>
           <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
