Formulaires de contact

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
 <h1 class="text-center">Bienvenue sur mon site</h1>
 <div class="container mt-3">
-    <img src="{{asset('assets/images/home.jpg')}}" alt="Image accueil" class="img-fluid">
+    <img src="{{asset('asset/images/home.jpg')}}" alt="Image accueil" class="img-fluid">
 </div>
 {% endblock %}
