--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <h1 class="text-center">Bienvenue sur mon site</h1>
-<div class="container mt-3">
-    <img src="{{asset('asset/images/home.jpg')}}" alt="Image accueil" class="img-fluid">
+<div class="container mt-3 d-flex justify-content-center ">
+    <img src="{{asset('asset/images/home.jpg')}}" width="500" height="500" alt="Image accueil" class="img-fluid">
 </div>
 {% endblock %}
