--- a/templates/base_user.html.twig
+++ b/templates/base_user.html.twig
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}Administration{% endblock %}</title>
+  <title>{% block title %}Utilisateur{% endblock %}</title>
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-info">
     <div class="container-fluid">
-      <a class="navbar-brand text-uppercase fw-bold" href="{{path('home')}}">Administration</a>
+      <a class="navbar-brand text-uppercase fw-bold" href="{{path('home')}}">Mon Site</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,19 +30,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav  ms-5 me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link {{app.current_route == 'home' ? 'active' : ''}}"
+            <a class="nav-link text-light {{app.current_route == 'home' ? 'active' : ''}}"
               href="{{path('home')}}">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{app.current_route starts with 'recipe.' ? 'active' : ''}}"
+            <a class="nav-link text-light {{app.current_route starts with 'recipe.' ? 'active' : ''}}"
               href="{{path('recipe.index')}}">Recettes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{app.current_route starts with 'category.' ? 'active' : ''}}"
-              href="{{path('category.index')}}">Catégories</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {{app.current_route == 'contact' ? 'active' : ''}}"
+            <a class="nav-link text-light {{app.current_route == 'contact' ? 'active' : ''}}"
               href="{{path('contact')}}">Contact</a>
           </li>
           <!-- <li class="nav-item dropdown">
