--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -11,6 +11,7 @@
 <table class="table table-hover">
     <thead>
         <tr>
+            <th>Image</th>
             <th>Titre</th>
             <th>Categorie</th>
             <th style="width: 130px;">Action</th>
@@ -19,6 +20,12 @@
     <tbody>
         {% for recipe in recipes %}
         <tr>
+            <td style="width: 100px; height: 60">
+                <img src="{{ asset('asset/images/recipes/') ~ recipe.thumbnail }} " width="90" style="max-height: 60px;" alt="Image recette" class="img-fluid">
+
+                <!-- generer une url a l'aide de vich -->
+                <!-- <img src="{{ vich_uploader_asset(recipe, 'thumbnailFile') }}" width="90" height="60" alt="Image recette"> -->
+            </td>
             <td>
                 <p>{{recipe.title}}</p>
             </td>
