--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -1,50 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Toutes les recettes{% endblock %}
+{% block title %}Toutes les recettes
+{% endblock %}
 
 {% block body %}
-<h2 class="text-center">LISTE DE TOUTE LES RECETTES</h2>
+	<h2 class="text-center">LISTE DE TOUTE LES RECETTES</h2>
 
-<p>
-    <a class="btn btn-primary btn-sm" href="{{path('recipe.create')}}">Ajouter une recette</a>
-</p>
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Image</th>
-            <th>Titre</th>
-            <th>Categorie</th>
-            <th style="width: 130px;">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for recipe in recipes %}
-        <tr>
-            <td style="width: 100px; height: 60">
-                <img src="{{ asset('asset/images/recipes/') ~ recipe.thumbnail }} " width="90" style="max-height: 60px;" alt="Image recette" class="img-fluid">
+	<p>
+		<a class="btn btn-primary btn-sm" href="{{path('recipe.create')}}">Ajouter une recette</a>
+	</p>
+	<table class="table table-hover">
+		<thead>
+			<tr>
+				<th>Image</th>
+				<th>Titre</th>
+				<th>Categorie</th>
+				<th style="width: 130px;">Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for recipe in recipes %}
+				<tr>
+					<td style="width: 100px; height: 60">
+						<img src="{{ asset('asset/images/recipes/') ~ recipe.thumbnail }} " width="90" style="max-height: 60px;" alt="Image recette" class="img-fluid">
 
-                <!-- generer une url a l'aide de vich -->
-                <!-- <img src="{{ vich_uploader_asset(recipe, 'thumbnailFile') }}" width="90" height="60" alt="Image recette"> -->
-            </td>
-            <td>
-                <p>{{recipe.title}}</p>
-            </td>
-            <td>
-                {{recipe.category.name | default('') }}
-            </td>
-            <td>
-                <div class="d-flex gap-1 justify-content-center">
-                    <a class="btn btn-success btn-sm"
-                        href="{{path('recipe.show',{id: recipe.id, slug: recipe.slug})}}"><img src="{{asset('asset/images/icons/eye.svg')}}" alt="icon afficher" class="img-fluid"></a>
-                    <a class="btn btn-primary btn-sm" href="{{path('recipe.edit',{id: recipe.id})}}"><img src="{{asset('asset/images/icons/pencil.svg')}}" alt="icon editer" class="img-fluid"></a>
-                    <form action="{{ path('recipe.delete',{id: recipe.id})  }}" method="post">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn btn-danger btn-sm"><img src="{{asset('asset/images/icons/trash.svg')}}" alt="icon delete" class="img-fluid"></button>
-                    </form>
-                </div>
-            </td>
-        </tr>
-        {% endfor%}
-    </tbody>
-</table>
+					</td>
+					<td>
+						<p>{{recipe.title}}</p>
+					</td>
+					<td>
+						{{recipe.category.name | default('') }}
+					</td>
+					<td>
+						<div class="d-flex gap-1 justify-content-center">
+							<a class="btn btn-success btn-sm" href="{{path('recipe.show',{id: recipe.id, slug: recipe.slug})}}"><img src="{{asset('asset/images/icons/eye.svg')}}" alt="icon afficher" class="img-fluid"></a>
+							<a class="btn btn-primary btn-sm" href="{{path('recipe.edit',{id: recipe.id})}}"><img src="{{asset('asset/images/icons/pencil.svg')}}" alt="icon editer" class="img-fluid"></a>
+							<form action="{{ path('recipe.delete',{id: recipe.id}) }}" method="post">
+								<input type="hidden" name="_method" value="DELETE">
+								<button type="submit" class="btn btn-danger btn-sm"><img src="{{asset('asset/images/icons/trash.svg')}}" alt="icon delete" class="img-fluid"></button>
+							</form>
+						</div>
+					</td>
+				</tr>
+				{% endfor%}</tbody>
+		</tbody>
+	</table>
+		 <div class="d-flex">
+			{% if page > 1 %}
+				<a href="{{ path('recipe.index', {page: page - 1}) }}" class="btn btn-secondary me-2">Précédent</a>
+			{% endif %}
+			
+			{% if page < maxPage %}
+				<a href="{{ path('recipe.index', {page: page + 1}) }}" class="btn btn-secondary">Suivant</a>
+			{% endif %}
+		</div>
 {% endblock %}
